plugins {
    id 'java-library'
    id 'maven-publish'
    id 'org.springframework.boot' version '3.2.5' apply false
}

group = 'com.github.lemadane'
version = project.hasProperty('version') ? project.version : '0.1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    withSourcesJar()
    withJavadocJar()
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly platform('org.springframework.boot:spring-boot-dependencies:3.2.5')
    compileOnly 'org.springframework.boot:spring-boot-starter-web'
    
    testImplementation platform('org.springframework.boot:spring-boot-dependencies:3.2.5')
    testImplementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

javadoc {
    if (JavaVersion.current().isJava9Compatible()) {
        options.addBooleanOption('html5', true)
    }
    options.addStringOption('Xdoclint:none', '-quiet')
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            artifactId = 'JSSR'
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs('-XX:+EnableDynamicAgentLoading', '-Dnet.bytebuddy.experimental=true')
}
